syntax = "proto2";
package org.apache.flink.formats.protobuf.proto;
option java_package = "org.apache.flink.formats.protobuf.testproto";
option java_multiple_files = true;

message MapTest {
    optional int32 a = 1;
    map<string, string> map1 = 2;
    map<string, InnerMessageTest> map2 = 3;

    message InnerMessageTest{
          optional int32 a =1;
          optional int64 b =2;
    }
}


